# ebc-fridge-prod-sim

./: Makefile  README.md  StyleSheet.py  bodys.json  example.json  fridge_production.txt  main.py  petriNet.py  pyproject.toml
elements/: FileDialog.py
fridge_parts/: CoolingSystem.py  Cover.py  Doors.py  Fridge.py  FridgeAttributes.py  Lights.py  Shelves.py
petri_net/: FridgePetriNet.py  PetriNet.py  Place.py  Transition.py  petriNet.py
qt_classes/: AnimatedButton.py  ControlTab.py  GUI.py  GanttChart.py  GanttChart_old.py  LoadedElementsTab.py  LoggerTab.py
threads/: ListenerThread.py  WorkerThread.py
utils/: json_parser.py
