[tool.poetry]
package-mode = false
name = "ebc-fridge-prod-sim"
version = "0.1.0"
description = ""
authors = [
    "Michał Mastej <m.mastej1812@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt5 = "^5.15.11"
matplotlib = "^3.9.2"
pylint = "^3.2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.10"

[tool.poetry.scripts]
# Expose a runnable entry point so users can run the app with `poetry run ebc-fridge-prod-sim`
ebc-fridge-prod-sim = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"